# python_django

./: Dockerfile  demo.py  docker-compose.yaml  orders.csv  pyproject.toml  quieries.sql  requirements.txt
mysite/: log.txt  log.txt.1  log.txt.2  log.txt.3  requirements.txt  shopapp-orders-fixtures.json  shopapp-orders-fixtures.xml  shopapp-products-fixtures.json  shopapp-products-fixtures.xml  shopapp.fixtures.json
mysite/blogapp/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_remove_article_pub_date_article_body_and_more.py  0003_alter_article_author_alter_article_category_and_more.py  0004_remove_article_content.py
mysite/blogapp/templates/blogapp/: base.html  (+9 more)
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_alter_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  (+1 more)
(+43 files in other folders)
