[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["natalia_iunusova <yunusova.nv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.1.0"
pillow = "^10.0.0"
gunicorn = "^21.2.0"
django-filter = "^23.2"
drf-spectacular = "^0.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
