[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["natalia_iunusova <yunusova.nv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.1.0"
pillow = "^10.0.0"
gunicorn = "^21.2.0"
django-filter = "^23.2"
drf-spectacular = "^0.26.3"
sentry-sdk = "^1.28.1"
sqlparse = "^0.4.4"
urllib3 = "^2.0.4"
asgiref = "^3.7.2"
attrs = "^23.1.0"
certifi = "^2023.7.22"
django-appconf = "^1.0.5"
dnspython = "^2.4.0"
docutils = "^0.20.1"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
inflection = "^0.5.1"
jsonschema = "^4.18.4"
mccabe = "^0.7.0"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.0.1"
pyrsistent = "^0.19.3"
pytz = "^2023.3"
pyyaml = "^6.0.1"
snowballstemmer = "^2.2.0"
uritemplate = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
